TFP-2460 splittet opp uttakperiode