@@ -2,12 +2,11 @@ package no.nav.foreldrepenger.regler.uttak.fastsetteperiode.betingelser;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.AktivitetIdentifikator;
 import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.FastsettePeriodeGrunnlag;
 import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.Trekkdager;
+import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.AktivitetIdentifikator;
 import no.nav.foreldrepenger.regler.uttak.felles.grunnlag.Stønadskontotype;
 import no.nav.fpsak.nare.doc.RuleDocumentation;
 import no.nav.fpsak.nare.evaluation.Evaluation;
@@ -47,7 +46,7 @@ public class SjekkOmTomForAlleSineKontoer extends LeafSpecification<FastsettePer
                 søkerSineKonto = Arrays.asList(Stønadskontotype.FEDREKVOTE, Stønadskontotype.FELLESPERIODE, Stønadskontotype.FORELDREPENGER); // 3 og 7
             }
         } else { // en har rett
-            søkerSineKonto = Collections.singletonList(Stønadskontotype.FORELDREPENGER); // 2 4 6 og 8
+            søkerSineKonto = List.of(Stønadskontotype.FORELDREPENGER); // 2 4 6 og 8
         }
         return søkerSineKonto;
     }
